2005-03-21  JP Rosevear  <jpr@novell.com> 
 
 	* gui/gnome-cal.c (default_client_cal_opened_cb): if its busy, try
 	again
 	(client_cal_opened_cb): ditto
  
2005-03-21  JP Rosevear  <jpr@novell.com> 
 
 	* gui/e-day-view.c (e_day_view_on_main_canvas_drag_data_received):
 	abort sequence
 	(e_day_view_on_top_canvas_motion): prevent drag of recurring events
 	(e_day_view_on_main_canvas_motion): ditto
 
 	* gui/e-calendar-view.c (on_unrecur_appointment): clear recur id
	
2005-03-21  JP Rosevear  <jpr@novell.com>
  
 	* gui/tasks-component.c (ensure_sources): ensure the color and
 	primary config are set on the personal source
 
 	* gui/calendar-component.c (ensure_sources): ditto
	
2005-03-21  Li Yuan  <li.yuan@sun.com>

	* gui/print.c: (print_comp_item):
	Fixes #44579

2005-03-17  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #68525, 68580
	* gui/gnome-cal.c (update_query), (gnome_calendar_init):
	Added a boolean variable to avoid crash when a race condition
	occurs.

2005-03-16  Rodrigo Moya <rodrigo@novell.com>

	Fixes #73101

	* calendar-errors.xml:
	* calendar-errors.xml.h: removed unnecessary leading space.

2005-03-16  Rodrigo Moya <rodrigo@novell.com>

	Fixes #72983

	* gui/e-cal-list-view.c (e_cal_list_view_new): set EXPAND_RECURRENCES
	flag on the model.

2005-03-15  JP Rosevear  <jpr@novell.com>

	* gui/itip-utils.c (itip_send_comp): when publishing, the to_list
	will always be null so don't error out then

2005-03-13  JP Rosevear  <jpr@novell.com>

	Fixes #73563
	
	* gui/alarm-notify/alarm-queue.c (notify_dialog_cb): make sure in
	the snooze case the tray (and via callbacks then) the dialog is
	destroyed

2005-03-14  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #72979
	* gui/e-cal-list-view.c (find_meeting),
	(e_cal_list_view_on_table_double_click): Check whether its a
	meeting and send appropriate boolean variable.

2005-03-11  Sushma Rai  <rsushma@novell.com>

	* gui/dialogs/event-page.c (event_page_show_options): Removed the check